fix: module imports in test notebooks

--- a/fit_metrics.ipynb
+++ b/fit_metrics.ipynb
@@ -12,42 +12,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1. Imporitng both libraries and requirements"
-      ],
+      "id": "dzpt8hYXs7kO",
       "metadata": {
         "id": "dzpt8hYXs7kO"
       },
-      "id": "dzpt8hYXs7kO"
+      "source": [
+        "1. Imporitng both libraries and requirements"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Alexe1900/iita_python.git\n",
-        "!git clone https://github.com/milansegedinac/kst.git\n",
-        "!pip install numpy\n",
-        "!pip install pandas\n",
-        "import sys\n",
-        "sys.path.append(\"/content/iita_python\")\n",
-        "sys.path.append(\"/content/kst\")\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import iita_python as test_iita\n",
-        "import learning_spaces.kst as kst"
-      ],
+      "execution_count": null,
+      "id": "s4P_gsz7tDlG",
       "metadata": {
-        "id": "s4P_gsz7tDlG",
-        "outputId": "03b37282-44e0-43f1-996e-ba3de8248eab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s4P_gsz7tDlG",
+        "outputId": "03b37282-44e0-43f1-996e-ba3de8248eab"
       },
-      "id": "s4P_gsz7tDlG",
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "fatal: destination path 'iita_python' already exists and is not an empty directory.\n",
             "fatal: destination path 'kst' already exists and is not an empty directory.\n",
@@ -60,58 +47,103 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
           ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/milansegedinac/kst.git\n",
+        "!pip install numpy\n",
+        "!pip install pandas\n",
+        "!pip install iita_python\n",
+        "\n",
+        "import sys\n",
+        "sys.path.append(\"/content/kst\")\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import iita_python as test_iita\n",
+        "import learning_spaces.kst as kst"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "2. Importing the dataset, generating quasi-orders"
-      ],
+      "id": "Wwxr0c_rtSMN",
       "metadata": {
         "id": "Wwxr0c_rtSMN"
       },
-      "id": "Wwxr0c_rtSMN"
+      "source": [
+        "2. Importing the dataset, generating quasi-orders"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "7CZKj4kktWg6",
+      "metadata": {
+        "id": "7CZKj4kktWg6"
+      },
+      "outputs": [],
       "source": [
         "from iita_python.utils import read_rp\n",
         "\n",
-        "data_raw = read_rp(\"iita_python/test_ipynbs/pisa.csv\")\n",
+        "!git clone https://gist.github.com/717f0147675b0c8ed25e50d583c943bf.git\n",
+        "data_raw = read_rp(\"717f0147675b0c8ed25e50d583c943bf/pisa.csv\")\n",
         "data = test_iita.Dataset(data_raw)\n",
         "\n",
         "unfolded_ce = test_iita.unfold_examples(data.counterexamples)\n",
         "qos = test_iita.ind_gen(unfolded_ce, data.items)"
-      ],
-      "metadata": {
-        "id": "7CZKj4kktWg6"
-      },
-      "id": "7CZKj4kktWg6",
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3. Testing the fit metrics"
-      ],
+      "id": "t-RqTjTEuBUo",
       "metadata": {
         "id": "t-RqTjTEuBUo"
       },
-      "id": "t-RqTjTEuBUo"
+      "source": [
+        "3. Testing the fit metrics"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3.1. Original IITA fit metric"
-      ],
+      "id": "oXyUJR12jT22",
       "metadata": {
         "id": "oXyUJR12jT22"
       },
-      "id": "oXyUJR12jT22"
+      "source": [
+        "3.1. Original IITA fit metric"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "id": "a5IvxR1I7-BG",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a5IvxR1I7-BG",
+        "outputId": "abc3c1be-79b3-4721-9c7c-a6e0e6669ba7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fit metric 0/13 correct ✅\n",
+            "Fit metric 1/13 correct ✅\n",
+            "Fit metric 2/13 correct ✅\n",
+            "Fit metric 3/13 correct ✅\n",
+            "Fit metric 4/13 correct ✅\n",
+            "Fit metric 5/13 correct ✅\n",
+            "Fit metric 6/13 correct ✅\n",
+            "Fit metric 7/13 correct ✅\n",
+            "Fit metric 8/13 correct ✅\n",
+            "Fit metric 9/13 correct ✅\n",
+            "Fit metric 10/13 correct ✅\n",
+            "Fit metric 11/13 correct ✅\n",
+            "Fit metric 12/13 correct ✅\n"
+          ]
+        }
+      ],
       "source": [
         "import iita_python.fit_metrics as test_fit\n",
         "corrects = kst.iita(data.response_patterns, 3)['diff']\n",
@@ -127,20 +159,33 @@
         "    print(f'Fit metric {i}/{len(qos)} incorrect ❌')\n",
         "    print(f'Test: {test_metric}')\n",
         "    print(f'Correct: {corr_metric}')"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "VIPtCas5jXP3",
       "metadata": {
-        "id": "a5IvxR1I7-BG",
-        "outputId": "abc3c1be-79b3-4721-9c7c-a6e0e6669ba7",
+        "id": "VIPtCas5jXP3"
+      },
+      "source": [
+        "3.2. Corrected fit metric"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "id": "j1LoyigWjc5t",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j1LoyigWjc5t",
+        "outputId": "bd2ca738-1a94-4ce8-b507-325a1acdf9e1"
       },
-      "id": "a5IvxR1I7-BG",
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Fit metric 0/13 correct ✅\n",
             "Fit metric 1/13 correct ✅\n",
@@ -157,20 +202,7 @@
             "Fit metric 12/13 correct ✅\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "3.2. Corrected fit metric"
       ],
-      "metadata": {
-        "id": "VIPtCas5jXP3"
-      },
-      "id": "VIPtCas5jXP3"
-    },
-    {
-      "cell_type": "code",
       "source": [
         "corrects = kst.iita(data.response_patterns, 2)['diff']\n",
         "\n",
@@ -185,49 +217,49 @@
         "    print(f'Fit metric {i}/{len(qos)} incorrect ❌')\n",
         "    print(f'Test: {test_metric}')\n",
         "    print(f'Correct: {corr_metric}')"
-      ],
-      "metadata": {
-        "id": "j1LoyigWjc5t",
-        "outputId": "bd2ca738-1a94-4ce8-b507-325a1acdf9e1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "j1LoyigWjc5t",
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fit metric 0/13 correct ✅\n",
-            "Fit metric 1/13 correct ✅\n",
-            "Fit metric 2/13 correct ✅\n",
-            "Fit metric 3/13 correct ✅\n",
-            "Fit metric 4/13 correct ✅\n",
-            "Fit metric 5/13 correct ✅\n",
-            "Fit metric 6/13 correct ✅\n",
-            "Fit metric 7/13 correct ✅\n",
-            "Fit metric 8/13 correct ✅\n",
-            "Fit metric 9/13 correct ✅\n",
-            "Fit metric 10/13 correct ✅\n",
-            "Fit metric 11/13 correct ✅\n",
-            "Fit metric 12/13 correct ✅\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cc77a5bc",
+      "metadata": {},
+      "source": [
+        "3.3 Minimized fit metric"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "75d058bc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "corrects = kst.iita(data.response_patterns, 1)['diff']\n",
+        "\n",
+        "for i, qo in enumerate(qos):\n",
+        "  test_metric = round(test_fit.mini_iita_fit(data, qo), 3)\n",
+        "  corr_metric = round(corrects[i], 3)\n",
+        "\n",
+        "  try:\n",
+        "    assert (test_metric == corr_metric)\n",
+        "    print(f'Fit metric {i}/{len(qos)} correct ✅')\n",
+        "  except AssertionError:\n",
+        "    print(f'Fit metric {i}/{len(qos)} incorrect ❌')\n",
+        "    print(f'Test: {test_metric}')\n",
+        "    print(f'Correct: {corr_metric}')"
       ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
     "colab": {
       "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
     }
   },
   "nbformat": 4,
