--- a/quasi-order-gen.ipynb
+++ b/quasi-order-gen.ipynb
@@ -46,12 +46,11 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/Alexe1900/iita_python.git\n",
         "!git clone https://github.com/milansegedinac/kst.git\n",
         "!pip install numpy\n",
         "!pip install pandas\n",
+        "!pip install iita_python\n",
         "import sys\n",
-        "sys.path.append(\"/content/iita_python\")\n",
         "sys.path.append(\"/content/kst\")\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -70,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -90,7 +89,8 @@
       "source": [
         "from iita_python.utils import read_rp\n",
         "\n",
-        "data_raw = read_rp(\"iita_python/test_ipynbs/pisa.csv\")\n",
+        "!git clone https://gist.github.com/717f0147675b0c8ed25e50d583c943bf.git\n",
+        "data_raw = read_rp(\"717f0147675b0c8ed25e50d583c943bf/pisa.csv\")\n",
         "assert not data_raw.empty\n",
         "print(\"Data imported successfully ✅\")"
       ]
