fix: moved missing data simulations to a dedicated folder

--- a/sim_missing_data/relative.ipynb
+++ b/sim_missing_data/relative.ipynb
@@ -7,44 +7,34 @@
         "id": "c534cd3f"
       },
       "source": [
-        "# Testing on PISA dataset with randomized missing data"
+        "# Testing on PISA dataset with randomized missing data, computing counterexamples relative to the amount of non-missing values of an item (TODO)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1. Importing package and dataset"
-      ],
+      "id": "1nLTjppYSRTe",
       "metadata": {
         "id": "1nLTjppYSRTe"
       },
-      "id": "1nLTjppYSRTe"
+      "source": [
+        "1. Importing package and dataset"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install iita_python\n",
-        "!git clone https://gist.github.com/717f0147675b0c8ed25e50d583c943bf.git\n",
-        "\n",
-        "import numpy as np\n",
-        "import iita_python as iita\n",
-        "import iita_python.fit_metrics as iita_fm\n",
-        "from iita_python.utils import read_rp\n",
-        "from random import randint, choice, shuffle"
-      ],
+      "execution_count": 18,
+      "id": "SlEiX6B1SSsU",
       "metadata": {
-        "id": "SlEiX6B1SSsU",
-        "outputId": "1d7b4365-3b2c-4f30-84e7-9f08574da53c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SlEiX6B1SSsU",
+        "outputId": "1d7b4365-3b2c-4f30-84e7-9f08574da53c"
       },
-      "id": "SlEiX6B1SSsU",
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: iita_python in /usr/local/lib/python3.12/dist-packages (1.0.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from iita_python) (2.0.2)\n",
@@ -56,20 +46,36 @@
             "fatal: destination path '717f0147675b0c8ed25e50d583c943bf' already exists and is not an empty directory.\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install iita_python\n",
+        "!git clone https://gist.github.com/717f0147675b0c8ed25e50d583c943bf.git\n",
+        "\n",
+        "import numpy as np\n",
+        "import iita_python as iita\n",
+        "import iita_python.fit_metrics as iita_fm\n",
+        "from iita_python.utils import read_rp\n",
+        "from random import randint, choice, shuffle"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "2. Testing function"
-      ],
+      "id": "jlvoh1yOata0",
       "metadata": {
         "id": "jlvoh1yOata0"
       },
-      "id": "jlvoh1yOata0"
+      "source": [
+        "2. Testing function"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "id": "ok9yLOnsTOU7",
+      "metadata": {
+        "id": "ok9yLOnsTOU7"
+      },
+      "outputs": [],
       "source": [
         "def test(metric, skips):\n",
         "  correct = True\n",
@@ -111,16 +117,16 @@
         "        data.loc[b, a] = np.nan\n",
         "\n",
         "  return correct_count"
-      ],
-      "metadata": {
-        "id": "ok9yLOnsTOU7"
-      },
-      "id": "ok9yLOnsTOU7",
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "id": "2mCbQD2MdhjN",
+      "metadata": {
+        "id": "2mCbQD2MdhjN"
+      },
+      "outputs": [],
       "source": [
         "def iter_test(metric, skips, iters, testf, **kwargs):\n",
         "  iter_res = []\n",
@@ -131,52 +137,52 @@
         "    print(res)\n",
         "    iter_res.append(res)\n",
         "  return iter_res"
-      ],
-      "metadata": {
-        "id": "2mCbQD2MdhjN"
-      },
-      "id": "2mCbQD2MdhjN",
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3. Running the tests"
-      ],
+      "id": "bxlTfNYCn9hr",
       "metadata": {
         "id": "bxlTfNYCn9hr"
       },
-      "id": "bxlTfNYCn9hr"
+      "source": [
+        "3. Running the tests"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "res = iter_test(iita_fm.mini_iita_fit, 5, 100, test)"
-      ],
+      "execution_count": null,
+      "id": "_RKBAaYZzHHY",
       "metadata": {
         "id": "_RKBAaYZzHHY"
       },
-      "id": "_RKBAaYZzHHY",
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "res = iter_test(iita_fm.mini_iita_fit, 5, 100, test)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "id": "dbK1wtQJoIbu",
+      "metadata": {
+        "id": "dbK1wtQJoIbu"
+      },
       "source": [
         "4. Analyzing the tests\n",
         "\n",
         "Running the tests is quite a long process, so I did it for 100 iterations and saved the results in the next cell\n",
         "\n",
         "Skip the next cell if you run the tests on your own"
-      ],
-      "metadata": {
-        "id": "dbK1wtQJoIbu"
-      },
-      "id": "dbK1wtQJoIbu"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "id": "C56FA42xrklh",
+      "metadata": {
+        "id": "C56FA42xrklh"
+      },
+      "outputs": [],
       "source": [
         "res = [\n",
         "  265, 610, 445, 410, 490, 365, 590, 645, 495, 270,\n",
@@ -190,76 +196,76 @@
         "  670, 490, 220, 595, 115, 125, 410, 295, 155, 265,\n",
         "  605, 460, 565, 495, 145, 250, 345, 510, 450, 485\n",
         "]"
-      ],
-      "metadata": {
-        "id": "C56FA42xrklh"
-      },
-      "id": "C56FA42xrklh",
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data = read_rp('./717f0147675b0c8ed25e50d583c943bf/pisa.csv')\n",
-        "res = (np.array(res) / (data.shape[0] * data.shape[1])).round(3)"
-      ],
+      "execution_count": 5,
+      "id": "vH4gnQydzRMS",
       "metadata": {
         "id": "vH4gnQydzRMS"
       },
-      "id": "vH4gnQydzRMS",
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "data = read_rp('./717f0147675b0c8ed25e50d583c943bf/pisa.csv')\n",
+        "res = (np.array(res) / (data.shape[0] * data.shape[1])).round(3)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "4.1. Average"
-      ],
+      "id": "uI5m9QlHvqDG",
       "metadata": {
         "id": "uI5m9QlHvqDG"
       },
-      "id": "uI5m9QlHvqDG"
+      "source": [
+        "4.1. Average"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.mean(res).round(3)"
-      ],
+      "execution_count": 6,
+      "id": "pGVvGq3Tzcuq",
       "metadata": {
-        "id": "pGVvGq3Tzcuq",
-        "outputId": "03e6a36e-5a2e-4674-e733-09d507616da3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pGVvGq3Tzcuq",
+        "outputId": "03e6a36e-5a2e-4674-e733-09d507616da3"
       },
-      "id": "pGVvGq3Tzcuq",
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.25)"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.mean(res).round(3)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "5. Testing function for biased item choice"
-      ],
+      "id": "8_t8CQLfW4WE",
       "metadata": {
         "id": "8_t8CQLfW4WE"
       },
-      "id": "8_t8CQLfW4WE"
+      "source": [
+        "5. Testing function for biased item choice"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "id": "jL0cWhVfW8sX",
+      "metadata": {
+        "id": "jL0cWhVfW8sX"
+      },
+      "outputs": [],
       "source": [
         "def test_biased_items(metric, skips, bias):\n",
         "  correct = True\n",
@@ -309,32 +315,23 @@
         "        data.loc[b, a] = np.nan\n",
         "\n",
         "  return correct_count"
-      ],
-      "metadata": {
-        "id": "jL0cWhVfW8sX"
-      },
-      "id": "jL0cWhVfW8sX",
-      "execution_count": 23,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "res_biased = iter_test(iita_fm.mini_iita_fit, 5, 40, test_biased_items, bias=[15, 11, 5, 3, 2])"
-      ],
+      "execution_count": 25,
+      "id": "xRG0_obAX-uu",
       "metadata": {
-        "id": "xRG0_obAX-uu",
-        "outputId": "142ab1b9-5901-44cc-a9d5-79afe6f86f5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xRG0_obAX-uu",
+        "outputId": "142ab1b9-5901-44cc-a9d5-79afe6f86f5c"
       },
-      "id": "xRG0_obAX-uu",
-      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "ITER 0\n",
             "0\n",
@@ -2173,37 +2170,36 @@
             "140\n"
           ]
         }
+      ],
+      "source": [
+        "res_biased = iter_test(iita_fm.mini_iita_fit, 5, 40, test_biased_items, bias=[15, 11, 5, 3, 2])"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "res_biased = (np.array(res_biased) / (data.shape[0] * data.shape[1])).round(3)"
-      ],
+      "execution_count": 29,
+      "id": "_szWqpicf_4l",
       "metadata": {
         "id": "_szWqpicf_4l"
       },
-      "id": "_szWqpicf_4l",
-      "execution_count": 29,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "res_biased = (np.array(res_biased) / (data.shape[0] * data.shape[1])).round(3)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "res_biased"
-      ],
+      "execution_count": 31,
+      "id": "2ul3dLn1gdVG",
       "metadata": {
-        "id": "2ul3dLn1gdVG",
-        "outputId": "3aa2f6e0-9a54-48f8-a0a5-2331c47f2e36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2ul3dLn1gdVG",
+        "outputId": "3aa2f6e0-9a54-48f8-a0a5-2331c47f2e36"
       },
-      "id": "2ul3dLn1gdVG",
-      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([0.147, 0.082, 0.121, 0.109, 0.129, 0.176, 0.182, 0.097, 0.094,\n",
@@ -2213,40 +2209,71 @@
               "       0.103, 0.047, 0.074, 0.082])"
             ]
           },
+          "execution_count": 31,
           "metadata": {},
-          "execution_count": 31
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "res_biased"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7aa3030f",
+      "metadata": {},
+      "source": [
+        "Running the tests is quite a long process, so I did it for 100 iterations and saved the results in the next cell\n",
+        "\n",
+        "Skip the next cell if you run the tests on your own"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "62a43f8d",
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "np.mean(res_biased).round(3)"
-      ],
+        "res_biased = np.array([0.147, 0.082, 0.121, 0.109, 0.129, 0.176, 0.182, 0.097, 0.094,\n",
+        "       0.047, 0.132, 0.126, 0.118, 0.103, 0.147, 0.15 , 0.15 , 0.118,\n",
+        "       0.106, 0.085, 0.1  , 0.126, 0.082, 0.291, 0.079, 0.062, 0.106,\n",
+        "       0.129, 0.291, 0.094, 0.1  , 0.165, 0.174, 0.221, 0.079, 0.218,\n",
+        "       0.103, 0.047, 0.074, 0.082])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "id": "h4SjkoiPgTin",
       "metadata": {
-        "id": "h4SjkoiPgTin",
-        "outputId": "f5680d5d-401f-4026-8022-0772c15087ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h4SjkoiPgTin",
+        "outputId": "f5680d5d-401f-4026-8022-0772c15087ee"
       },
-      "id": "h4SjkoiPgTin",
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.126)"
             ]
           },
+          "execution_count": 30,
           "metadata": {},
-          "execution_count": 30
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.mean(res_biased).round(3)"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "iita",
       "language": "python",
@@ -2255,9 +2282,6 @@
     "language_info": {
       "name": "python",
       "version": "3.12.11"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
