feat: calculating standard deviation of results

--- a/sim_missing_data/normal.ipynb
+++ b/sim_missing_data/normal.ipynb
@@ -22,28 +22,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "id": "SlEiX6B1SSsU",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SlEiX6B1SSsU",
-        "outputId": "1d7b4365-3b2c-4f30-84e7-9f08574da53c"
+        "outputId": "9cda60ef-be43-4eda-c354-e1ffb8b39088"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Requirement already satisfied: iita_python in /usr/local/lib/python3.12/dist-packages (1.0.2)\n",
+            "Collecting iita_python\n",
+            "  Downloading iita_python-1.1-py3-none-any.whl.metadata (5.3 kB)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from iita_python) (2.0.2)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from iita_python) (2.2.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas->iita_python) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas->iita_python) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas->iita_python) (2025.3)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas->iita_python) (1.17.0)\n",
-            "fatal: destination path '717f0147675b0c8ed25e50d583c943bf' already exists and is not an empty directory.\n"
+            "Downloading iita_python-1.1-py3-none-any.whl (8.0 kB)\n",
+            "Installing collected packages: iita_python\n",
+            "Successfully installed iita_python-1.1\n",
+            "Cloning into '717f0147675b0c8ed25e50d583c943bf'...\n",
+            "remote: Enumerating objects: 3, done.\u001b[K\n",
+            "remote: Total 3 (delta 0), reused 0 (delta 0), pack-reused 3 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (3/3), done.\n"
           ]
         }
       ],
@@ -121,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 3,
       "id": "2mCbQD2MdhjN",
       "metadata": {
         "id": "2mCbQD2MdhjN"
@@ -230,22 +237,59 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pGVvGq3Tzcuq",
-        "outputId": "03e6a36e-5a2e-4674-e733-09d507616da3"
+        "outputId": "46279705-36bb-41c4-b3b0-eb09958222cb"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.25)"
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
         "np.mean(res).round(3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.2. Standard deviation"
+      ],
+      "metadata": {
+        "id": "j3dBMa9CsvPL"
+      },
+      "id": "j3dBMa9CsvPL"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.std(res).round(3)"
+      ],
+      "metadata": {
+        "id": "bYkdkEQDsx1a",
+        "outputId": "6cd9fd8e-4193-49ba-a792-dad7ec4d9481",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "bYkdkEQDsx1a",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(0.089)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
       ]
     },
     {
@@ -260,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "jL0cWhVfW8sX",
       "metadata": {
         "id": "jL0cWhVfW8sX"
@@ -319,7 +363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "xRG0_obAX-uu",
       "metadata": {
         "colab": {
@@ -2177,7 +2221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "_szWqpicf_4l",
       "metadata": {
         "id": "_szWqpicf_4l"
@@ -2189,7 +2233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "2ul3dLn1gdVG",
       "metadata": {
         "colab": {
@@ -2221,9 +2265,11 @@
     {
       "cell_type": "markdown",
       "id": "7aa3030f",
-      "metadata": {},
+      "metadata": {
+        "id": "7aa3030f"
+      },
       "source": [
-        "Running the tests is quite a long process, so I did it for 100 iterations and saved the results in the next cell\n",
+        "Running the tests is quite a long process, so I did it for 40 iterations and saved the results in the next cell\n",
         "\n",
         "Skip the next cell if you run the tests on your own"
       ]
@@ -2232,7 +2278,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "62a43f8d",
-      "metadata": {},
+      "metadata": {
+        "id": "62a43f8d"
+      },
       "outputs": [],
       "source": [
         "res_biased = np.array([0.147, 0.082, 0.121, 0.109, 0.129, 0.176, 0.182, 0.097, 0.094,\n",
@@ -2244,7 +2292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "h4SjkoiPgTin",
       "metadata": {
         "colab": {
