hotfix: passing item bias to iter_test in sim_missing_data

--- a/sim_missing_data/normal.ipynb
+++ b/sim_missing_data/normal.ipynb
@@ -33,8 +33,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting iita_python\n",
             "  Downloading iita_python-1.1-py3-none-any.whl.metadata (5.3 kB)\n",
@@ -244,14 +244,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.25)"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -260,39 +260,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "4.2. Standard deviation"
-      ],
+      "id": "j3dBMa9CsvPL",
       "metadata": {
         "id": "j3dBMa9CsvPL"
       },
-      "id": "j3dBMa9CsvPL"
+      "source": [
+        "4.2. Standard deviation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.std(res).round(3)"
-      ],
+      "execution_count": 7,
+      "id": "bYkdkEQDsx1a",
       "metadata": {
-        "id": "bYkdkEQDsx1a",
-        "outputId": "4f9d1651-2ede-4675-d1b2-80c24e5a4f1b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bYkdkEQDsx1a",
+        "outputId": "4f9d1651-2ede-4675-d1b2-80c24e5a4f1b"
       },
-      "id": "bYkdkEQDsx1a",
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.089)"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.std(res).round(3)"
       ]
     },
     {
@@ -377,7 +377,7 @@
         "skips = 5 # amount of missing values to add at a time\n",
         "bias = [15, 11, 5, 3, 2] # probability distribution across the items. higher = more often\n",
         "\n",
-        "res_biased = iter_test(iita_fm.mini_iita_fit, skips, iters, test_biased_items, bias)"
+        "res_biased = iter_test(iita_fm.mini_iita_fit, skips, iters, test_biased_items, bias=bias)"
       ]
     },
     {
@@ -405,7 +405,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([0.147, 0.082, 0.121, 0.109, 0.129, 0.176, 0.182, 0.097, 0.094,\n",
@@ -415,8 +414,9 @@
               "       0.103, 0.047, 0.074, 0.082])"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -464,14 +464,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.126)"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -480,29 +480,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.std(res_biased).round(3)"
-      ],
+      "execution_count": 17,
+      "id": "JLGPNhIrym4g",
       "metadata": {
-        "id": "JLGPNhIrym4g",
-        "outputId": "e0a57135-36d6-432c-b0b3-d447e293d6ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JLGPNhIrym4g",
+        "outputId": "e0a57135-36d6-432c-b0b3-d447e293d6ca"
       },
-      "id": "JLGPNhIrym4g",
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.055)"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.std(res_biased).round(3)"
       ]
     }
   ],
