--- a/sim_missing_data/relative.ipynb
+++ b/sim_missing_data/relative.ipynb
@@ -33,8 +33,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting iita_python\n",
             "  Downloading iita_python-1.1-py3-none-any.whl.metadata (5.3 kB)\n",
@@ -187,6 +187,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "id": "AlKgY9qwq5ZR",
+      "metadata": {
+        "id": "AlKgY9qwq5ZR"
+      },
+      "outputs": [],
       "source": [
         "res = [\n",
         "    530, 440, 380, 620, 330, 620, 390, 370, 620, 550,\n",
@@ -200,13 +206,7 @@
         "    450, 330, 570, 620, 540, 510, 190, 400, 410, 420,\n",
         "    630, 580, 330, 400, 420, 580, 460, 280, 630, 540\n",
         "]"
-      ],
-      "metadata": {
-        "id": "AlKgY9qwq5ZR"
-      },
-      "id": "AlKgY9qwq5ZR",
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -244,14 +244,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.271)"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -260,39 +260,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "4.2. Standard deviation"
-      ],
+      "id": "YwDfIIw9r8Hm",
       "metadata": {
         "id": "YwDfIIw9r8Hm"
       },
-      "id": "YwDfIIw9r8Hm"
+      "source": [
+        "4.2. Standard deviation"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.std(res).round(3)"
-      ],
+      "execution_count": 7,
+      "id": "LCsEszVmr6q9",
       "metadata": {
-        "id": "LCsEszVmr6q9",
-        "outputId": "cdc2627a-8a53-4450-e358-aa7314fc0b54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LCsEszVmr6q9",
+        "outputId": "cdc2627a-8a53-4450-e358-aa7314fc0b54"
       },
-      "id": "LCsEszVmr6q9",
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.078)"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.std(res).round(3)"
       ]
     },
     {
@@ -377,7 +377,7 @@
         "skips = 5 # amount of missing values to add at a time\n",
         "bias = [15, 11, 5, 3, 2] # probability distribution across the items. higher = more often\n",
         "\n",
-        "res_biased = iter_test(iita_fm.mini_iita_fit, skips, iters, test_biased_items, bias)"
+        "res_biased = iter_test(iita_fm.mini_iita_fit, skips, iters, test_biased_items, bias=bias)"
       ]
     },
     {
@@ -433,14 +433,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.135)"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -449,29 +449,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.std(res_biased).round(3)"
-      ],
+      "execution_count": 12,
+      "id": "mnJ6ebsR2s2K",
       "metadata": {
-        "id": "mnJ6ebsR2s2K",
-        "outputId": "2a01b57f-0698-4d09-8233-3fa13fe401ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mnJ6ebsR2s2K",
+        "outputId": "2a01b57f-0698-4d09-8233-3fa13fe401ab"
       },
-      "id": "mnJ6ebsR2s2K",
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.048)"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "np.std(res_biased).round(3)"
       ]
     }
   ],
